# calc

./: .gitignore  CMakeLists.txt  README.md
calc/: CMakeLists.txt  Evaluator.h  Parser.h  Printer.h  Sanitizer.h  calc.cpp  calc.h
calc/tokens/: Function.cpp  Function.h  Grouping.cpp  Grouping.h  Number.cpp  Number.h  Operator.cpp  Operator.h  Token.h
